# nncase

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .pep8  CMakeLists.txt  CMakeSettings.json  Directory.Build.props  Directory.Packages.props  LICENSE  NuGet.Config  README.md  USAGE.md  abs.S  appveyor.yml  asm.txt  azure-pipelines.yml  benchmark_ntt.md  benchmark_ntt_matmul_x86_64.md  build.cmd  build.sh  build_nncase.sh  conanfile-runtime.txt  conanfile.py  conanfile.txt  env.sh  global.json  log  model4.kmodel  model5.kmodel  model_4.tflite  model_5.tflite  nncase.sln  onnx_op_support.md  optimize_resnet50_new.patch  package-lock.json  pyproject.toml  requirements.test.txt  run_docker.sh  set_dotnet_version.sh  (+4 more)
benchmark/: CMakeLists.txt  cli.cpp  gen_kmodel.py
benchmark/models/: .gitignore  CMakeLists.txt  Resource.rc  models.cpp  models.h  resource.h
benchmark/models/cpu/: mnist.kmodel  mobilenet_v2.kmodel
csharp/: CMakeLists.txt  Nncase.Runtime.Native.proj  Nncase.Simulator.Native.proj  RuntimeTensor.h  build.cmd  build.sh  interpreter.cpp  readme.md  stdprefix.h
csharp/nuget/: Nncase.Runtime.Native.linux-x64.nuspec  Nncase.Runtime.Native.nuspec  Nncase.Runtime.Native.osx-arm64.nuspec  Nncase.Runtime.Native.osx-x64.nuspec  Nncase.Runtime.Native.win-x64.nuspec  Nncase.Simulator.Native.linux-x64.nuspec  Nncase.Simulator.Native.nuspec  Nncase.Simulator.Native.osx-arm64.nuspec  Nncase.Simulator.Native.osx-x64.nuspec  Nncase.Simulator.Native.win-x64.nuspec
csharp/nuget/targets/: Nncase.Simulator.Native.linux-x64.targets  Nncase.Simulator.Native.osx-arm64.targets  Nncase.Simulator.Native.osx-x64.targets  Nncase.Simulator.Native.win-x64.targets
modules/cpu/: CMakeLists.txt
modules/cpu/cmake/: nncase_rt_modules_cpuConfig.cmake.in
modules/cpu/examples/: CMakeLists.txt
modules/k210/: CMakeLists.txt
modules/k210/cmake/: kendryte_lib.cmake  nncase_rt_modules_k210Config.cmake.in
modules/k210/codegen/: CMakeLists.txt  module_builder.cpp  module_builder.h
modules/k210/ir/: CMakeLists.txt
modules/ncnn/: CMakeLists.txt
modules/vulkan/: CMakeLists.txt
modules/vulkan/cmake/: nncase_rt_modules_vulkanConfig.cmake.in
modules/vulkan/src/: dllmain.cpp
modules/xpu/: CMakeLists.txt
modules/xpu/cmake/: nncase_rt_modules_cpuConfig.cmake.in
modules/xpu/examples/: CMakeLists.txt
src/NnCase.Runtime.Native/: CMakeLists.txt  NnCase.Runtime.Native.cpp  dataset.cpp  dataset.h  nceval.cpp
src/NnCase.Runtime.Native/include/: datatypes.h  runtime_op_utility.h
src/NnCase.Runtime.Native/kernels/: utils.h
src/NnCase.Runtime.Native/runtime/: interpreter.cpp  kernel_registry.cpp  kernel_registry.h  span_reader.h
src/NnCase.Runtime.Native/targets/: node_body.h
src/cli/: CMakeLists.txt  ProgressBar.hpp  cli.cpp  compile.cpp  compile.h  inference.cpp  inference.h  modes.h  registry.cpp  registry.h
src/codegen/: CMakeLists.txt  codegen.cpp  model_builder.cpp  module_builder.cpp
src/codegen/stackvm/: CMakeLists.txt  module_builder.cpp  module_builder.h  op_writer.cpp  ops.def
src/data/: CMakeLists.txt  dataset.cpp
src/evaluator/: CMakeLists.txt  evaluate_context.cpp  evaluator.cpp  quantizer.cpp
src/functional/: CMakeLists.txt  dummy.cpp  ops.cpp  ops.cpu.cpp  ops.platform.cpp
src/importer/: CMakeLists.txt  importer.cpp
src/importer/caffe/: CMakeLists.txt  caffe.pb.cc  caffe.pb.h  caffe.proto  caffe_importer.cpp  caffe_importer.h  opcode.def
src/importer/ncnn/: CMakeLists.txt  allocator.h  datareader.cpp  datareader.h  layer.h  mat.cpp  mat.h  modelbin.cpp  modelbin.h  ncnn_importer.cpp  (+4 more)
src/ir/: CMakeLists.txt  call.cpp  connectors.cpp  constant.cpp  debug.cpp  expr.cpp  function.cpp  graph.cpp  graph.partition.cpp  ir_types.natvis  module.cpp  node.cpp  object.cpp  op.cpp  placeholders.cpp  shape.cpp  tuple.cpp  type.cpp  type_infer.cpp  var.cpp  visitor.cpp
src/kernels/: CMakeLists.txt  convolution.cpp  kernel_context.cpp  nnil.cpp  reduce_window.cpp  tensor_compute.cpp
src/nncase/: CMakeLists.txt  compiler.cpp  nncase.sln  nncase.vcxproj  nncase.vcxproj.filters  plugin_loader.cpp  simulator.cpp
src/plugin/: CMakeLists.txt  plugin_loader.cpp
src/runtime/: CMakeLists.txt  allocator.cpp  builtin_runtimes.inc.in  error.cpp  host_runtime_tensor.cpp  interpreter.cpp  kernel_registry.cpp  op_profile.cpp  runtime_function.cpp  runtime_loader.cpp  runtime_loader.h  runtime_module.cpp  runtime_tensor.cpp  runtime_tensor_impl.cpp  section.cpp  section.h  shared_runtime_tensor.platform.cpp
src/schedule/: CMakeLists.txt  buffer_allocator.cpp  freelist.cpp  function_schedule_context.cpp  liveness_analysis.cpp  liveness_analysis.h  model_schedule_context.cpp  module_schedule_context.cpp  schedule_context.cpp  scheduler.cpp
src/scheduler/: CMakeLists.txt  freelist.cpp  memory_allocator.cpp  scheduler.cpp
src/targets/: CMakeLists.txt  neutral_target.cpp  target.cpp  target2.cpp
src/transforms/: CMakeLists.txt  egraph.cpp  egraph_pass.cpp  egraph_pattern.cpp  pass.cpp  transform.cpp
targets/cpu/: CMakeLists.txt  cpu_target.cpp  cpu_target.h
targets/k210/: CMakeLists.txt  k210_target.cpp  k210_target.h
targets/vulkan/: CMakeLists.txt  vulkan_target.cpp  vulkan_target.h
tests/kernels/: CMakeLists.txt  functions.sh  generate_macro.sh  kernel_test.h  macro_util.h  test_batch_normalization.cpp  test_batch_normalization.disable  test_batch_normalization.json  test_batch_to_space.cpp  test_batch_to_space.disable  test_batch_to_space.json  test_binary.cpp  test_binary_add.cpp  test_binary_div.cpp  test_binary_left_shift.cpp  test_binary_logic.cpp  test_binary_logical_and.cpp  test_binary_logical_or.cpp  test_binary_logical_or.disable  test_binary_logical_xor.cpp  test_binary_max.cpp  test_binary_min.cpp  test_binary_mod.cpp  test_binary_mul.cpp  test_binary_pow.cpp  test_binary_sub.cpp  test_bitcast.cpp  test_broad_cast.json  test_broadcast.cpp  test_bucket_pad.cpp  test_bucket_pad.disable  test_bucket_pad.json  test_cast.cpp  test_cast.json  test_celu.cpp  test_celu.json  test_clamp.cpp  test_clamp.json  test_compare.cpp  test_compare_equal.cpp  (+199 more)
(+6973 files in other folders)
