[project]
name = "nncase"
dynamic = ["version"]
requires-python = ">=3.8"
authors = [{ name = "sunnycase" }, { email = "sunnycase@live.cn" }]
maintainers = [{ name = "sunnycase" }, { email = "sunnycase@live.cn" }]
readme = "README.md"
description = "A neural network compiler for AI accelerators"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
keywords = ["kendryte", "nn", "compiler", "k210", "k510", "k230"]
dependencies = ["numpy"]

[project.urls]
homepage = "https://github.com/kendryte/nncase"

[build-system]
requires = ["setuptools>=42", "wheel", "conan==2.6.0", "gitpython"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = ["cp38*", "cp39*", "cp310*", "cp311*", "cp312*"]
skip = "*musllinux*"
manylinux-x86_64-image = "sunnycase/manylinux_2_28_x86_64:1.0"
test-requires = "pytest"
test-command = [
  "pytest {project}/tests/other"
]

[tool.cibuildwheel.environment]
PYTHONPATH = "{project}/tests:$PYTHONPATH"

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]
before-build = [
  "rm -f {project}/CMakeUserPresets.json",
  "pip install https://github.com/sunnycase/auditwheel/releases/download/6.0.0/auditwheel-6.0.0-py3-none-any.whl"
]
repair-wheel-command = "LD_LIBRARY_PATH=/usr/lib64 auditwheel repair -w {dest_dir} {wheel} --exclude libvulkan.so.1,libgomp.so.1"

# [tool.cibuildwheel.linux.environment]
# CC = "gcc-14"
# CXX = "g++-14"

[tool.cibuildwheel.macos]
archs = ["arm64"]

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.15" #
